--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class='bx bxl-product-hunt' ></i></div>
               <h4 class="title"><a href="">Product Design</a></h4>
-              <p class="description">we help you understand your ideal consumer, identify future goals and discover opportunities.</p>
+              <p class="description">We help you understand your ideal consumer, identify future goals and discover opportunities.</p>
             </div>
           </div>
 
@@ -158,7 +158,7 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <div class="icon"><i class='bx bxs-videos'></i></div>
               <h4 class="title"><a href="">Motion Graphics</a></h4>
-              <p class="description">serving you high quality videos and animation for any format.</p>
+              <p class="description">Serving you high quality videos and animation for any format.</p>
             </div>
           </div>
 
@@ -354,7 +354,7 @@
                 </div>
               </div>
               <h6 class="team-title">Vyshnav Vijayan</h6>
-              <span>Animator</span>
+              <span>Motion Designer</span>
             </div>
           </div>
           <!-- end team member -->
@@ -428,10 +428,11 @@
               <h3>Fusion Design Studio</h3>
               <p>We thrive in making a difference – to your business and ours. Since we live in a hyper-connected world where multiple conversations, distractions and perspectives are thronging the minds of new age consumers, we ensure that your brand and your story stand out. Better yet, stand ahead. Break the clutter with our multi-disciplinary approaches and truly connect with the people (ahem and profits) you value..</p>
               <div class="social-links">
-                <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
+                <a href="https://twitter.com/fusion_design_" class="twitter"><i class="icofont-twitter"></i></a>
                 <a href="https://www.facebook.com/Fusion-Design-Studio-106799774356901" class="facebook"><i class="icofont-facebook"></i></a>
                 <a href="https://www.instagram.com/fusiondesignstudio/" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+                <a href="https://dribbble.com/fusion_design_studio" class="linkedin"><i class="icofont-dribble"></i></a>
               </div>
             </div>
           </div>
